# stwo-cairo

stwo_cairo_prover/: Cargo.toml
stwo_cairo_prover/crates/adapted_prover/: Cargo.toml
stwo_cairo_prover/crates/adapted_prover/src/: main.rs
stwo_cairo_prover/crates/cairo-host-sdk/: Cargo.toml
stwo_cairo_prover/crates/cairo-host-sdk/src/: lib.rs
stwo_cairo_prover/crates/cairo-serialize/src/: lib.rs
stwo_cairo_prover/crates/prover/: Cargo.toml
stwo_cairo_prover/crates/prover/src/adapter/: plain.rs
stwo_cairo_prover/crates/prover/src/cairo_air/: mod.rs  preprocessed.rs
stwo_cairo_prover/crates/prover/src/components/verify_instruction/: prover.rs
stwo_cairo_prover/crates/prover/src/input/vm_import/: mod.rs
stwo_cairo_prover/examples/: Cargo.toml
stwo_cairo_prover/examples/guest/: Scarb.toml
stwo_cairo_prover/examples/guest/src/: lib.cairo
stwo_cairo_prover/examples/host/: Cargo.toml  build.rs
stwo_cairo_prover/examples/host/src/: main.rs
stwo_cairo_verifier/: Cargo.toml  Scarb.toml
stwo_cairo_verifier/crates/cairo_air/: Scarb.toml
stwo_cairo_verifier/crates/cairo_air/src/: lib.cairo
stwo_cairo_verifier/crates/cairo_verifier/: Scarb.toml  corelib
stwo_cairo_verifier/crates/cairo_verifier/src/: lib.cairo
stwo_cairo_verifier/crates/cairo_verifier/tests/data/: proof.json  proof.txt  proof1.json
stwo_cairo_verifier/crates/env_macro/: Cargo.toml  Scarb.toml
stwo_cairo_verifier/crates/env_macro/src/: lib.rs
