[package]
name = "cairo-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde_json = "1.0.125"
clap = {version = "4.5.9", features = ["derive"]}
wasm-bindgen = { version = "= 0.2.92" }
cairo-host-sdk.workspace = true

[build-dependencies]
scarb-metadata = { git = "https://github.com/software-mansion/scarb" }
